[cleanup] Do not use deprecated new instance throughout